# fast-sde

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_BENCHMARK_REPORT.md  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark_results_20250921_013331.csv
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Downloads/Maxim-Mech-Platform-main/: package-lock.json  package.json
Downloads/Maxim-Mech-Platform-main/.github/: pull_request_template.md
Downloads/Maxim-Mech-Platform-main/.github/workflows/: ci.yml  deploy.yml  frontend-staging.yml
Downloads/Maxim-Mech-Platform-main/Maxim-Mech-Platform-main/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Downloads/Maxim-Mech-Platform-main/Maxim-Mech-Platform-main/src/: App.tsx  index.css  main.tsx
Downloads/Maxim-Mech-Platform-main/maxim-backend/: .env.example  .gitignore  README.md  ecosystem.config.js  package-lock.json  package.json  test_api.js  test_results.txt  tsconfig.json
Downloads/Maxim-Mech-Platform-main/maxim-backend/prisma/: seed.js  (+3 more)
examples/: demo.rs  error_handling_demo.rs  heston_calibration.rs
results/: summary.csv
scripts/: benchmark.rs
src/: error.rs  lib.rs  math_utils.rs  output.rs  rng.rs
src/analytics/: bs_analytic.rs  mod.rs
src/mc/: mc_engine.rs  mod.rs  payoffs.rs
src/models/: gbm.rs  heston.rs  merton.rs  mod.rs  model.rs  ou_process.rs  sabr.rs
src/solvers/: euler_maruyama.rs  milstein.rs  mod.rs  srk.rs
tests/: greeks_test.rs  integration_test.rs  solver_convergence_test.rs
(+114 files in other folders)
